# babeltrader-core

./: .gitignore  CMakeLists.txt  gen_build.bat  gen_build.sh  readme.md
babeltrader/api/cpp/: CMakeLists.txt  api.h  api_enum.cpp  api_enum.h  api_macro.h  api_msg_struct.h  api_msg_type.h  api_net_msg.h  enum.cpp  enum.h  error.h  macro.h  struct.h  trade_api.cpp  trade_api.h
babeltrader/api/cpp/internal/: api_msg_type.h  api_net_msg.h
babeltrader/base/: CMakeLists.txt  babeltrader_base.h
babeltrader/base/codec/: codec.cpp  codec.h  codec_callback.cpp  codec_callback.h  codec_chain.cpp  codec_chain.h  tcp_bytes_buf_codec.cpp  tcp_bytes_buf_codec.h
babeltrader/base/defines/: enum.h  event_message.h  macro.h  msg_struct.h  msg_type.h  net_message.h  struct.h
babeltrader/base/json/: json_utils.h
babeltrader/base/log/: log.cpp  log.h
babeltrader/base/memory/: event_msg_pool.cpp  event_msg_pool.h
babeltrader/base/service/: endian_conv.cpp  endian_conv.h  event_loop.cpp  event_loop.h  message_dispatcher.hpp  quote_server_config.cpp  quote_server_config.h  quote_tcp_server.cpp  quote_tcp_server.h  server_event_loop.cpp  server_event_loop.h  session_manager.cpp  session_manager.h  socket_handle.cpp  socket_handle.h  tcp_server_handle.cpp  tcp_server_handle.h  tcp_socket_handle.cpp  tcp_socket_handle.h
babeltrader/base/version/: version.cpp  version.h
babeltrader/include/: common_event_message.h  common_macro.h  common_msg_struct.h  common_msg_type.h  common_net_message.h
babeltrader/utils/: CMakeLists.txt  babeltrader_utils.h  ev_loop_config.cpp  ev_loop_config.h  json_config.cpp  json_config.h  json_utils.h  quote_sub_config.cpp  quote_sub_config.h  tcp_server_config.cpp  tcp_server_config.h  utils_macro.h
cmake/: dep.cmake.in  googletest.cmake.in  mugglecpp.cmake.in  rapidjson.cmake.in
config-template/: tcp_server.json
config-template/sim/: quote_config.json
doc/: dev.md  overview.md
example/codec/: example_codec.cpp
example/include/: example_msg.h
example/msg_dispatcher/: example_msg_dispatcher.cpp
example/tcp_client/: example_tcp_client.cpp  example_tcp_client_ev_loop.cpp  example_tcp_client_ev_loop.h
example/tcp_server/: example_tcp_server.cpp  example_tcp_server_config.cpp  example_tcp_server_config.h  example_tcp_server_ev_loop.cpp  example_tcp_server_ev_loop.h
test/codec/: test_tcp_bytes_buf_codec.cpp
test/endian/: test_endian.cpp
test/enum/: test_enum.cpp
test_utils/: CMakeLists.txt  test_utils.cpp  test_utils.h  test_utils_func.h  test_utils_macro.h
test_utils/mock/: mock_socket.cpp  mock_socket.h  mock_tcp_socket.cpp  mock_tcp_socket.h
